# qit

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.github/workflows/: ci.yml  landing-pages.yml  release.yml
crates/qit-domain/: Cargo.toml
crates/qit-domain/src/: auth.rs  branch_rules.rs  issues.rs  lib.rs
crates/qit-git/: Cargo.toml
crates/qit-git/src/: lib.rs
crates/qit-http/: Cargo.toml
crates/qit-http-backend/: Cargo.toml
crates/qit-http-backend/src/: lib.rs
crates/qit-http/src/: lib.rs
crates/qit-storage/: Cargo.toml
crates/qit-storage/src/: lib.rs
crates/qit-transports/: Cargo.toml
crates/qit-transports/src/: lib.rs
crates/qit-webui/: Cargo.toml
crates/qit-webui/frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
crates/qit-webui/frontend/src/: App.tsx  index.css
crates/qit-webui/frontend/src/components/atoms/: BrandLogo.tsx  Controls.tsx  ModalShell.tsx
crates/qit-webui/frontend/src/components/molecules/: BranchCombobox.tsx  Fields.tsx
crates/qit-webui/frontend/src/components/organisms/: CreateBranchModal.tsx  CreateIssueModal.tsx  CreatePullRequestModal.tsx  MarkdownSurface.tsx  MonacoCodeSurface.tsx  RepoFileTree.tsx
crates/qit-webui/frontend/src/components/organisms/panels/: BranchesPanel.tsx  CodePanel.tsx  CommitsPanel.tsx  IssuesPanel.tsx  PullRequestsPanel.tsx  SettingsPanel.tsx  UserSettingsPanel.tsx  panelUtils.ts  shared.tsx
crates/qit-webui/frontend/src/components/pages/: DashboardPage.tsx  PreviewPage.tsx
crates/qit-webui/frontend/src/components/templates/: AppShell.tsx  shellTabIcons.tsx
crates/qit-webui/frontend/src/lib/: api.ts  commitGraph.ts  fileIcons.tsx  queryState.test.ts  queryState.ts  types.ts  usePersistentDisplayName.ts
crates/qit-webui/frontend/tests/: smoke.spec.ts
crates/qit-webui/src/: auth.rs  lib.rs
design/qit-logo-review/: README.md
docs/: PARITY.md  RELEASE_GATE.md  TRUST_MODEL.md
landing/: README.md  index.html  package-lock.json  package.json  vite.config.ts
landing/src/: App.tsx  index.css  mdx.d.ts
landing/src/components/atoms/: DocsCodeBlock.tsx  DocsImagePreview.tsx  DocsTable.tsx  primitives.tsx
landing/src/components/molecules/: cards.tsx
landing/src/components/organisms/: LandingSections.tsx
landing/src/components/pages/: DocsPage.tsx  LandingPage.tsx  NotFoundPage.tsx
landing/src/components/templates/: LandingShell.tsx
landing/src/docs/: branch-protection.mdx  cli-reference.mdx  faq.mdx  first-collaboration.mdx  install.mdx  managing-authentication.mdx  personal-access-tokens.mdx  quick-start.mdx  sharing-and-auth.mdx  sidecar-model.mdx  style-lab.mdx  tailscale.mdx  troubleshooting-recovery.mdx  web-ui-reference.mdx
landing/src/lib/: content.ts  docs.tsx  hrefs.ts  install.ts  mdxComponents.tsx  siteLinks.tsx
packaging/homebrew/: qit.rb.template
qit-cli/: Cargo.toml
qit-cli/src/: main.rs  serve_output.rs  supervisor.rs
tests/: Cargo.toml
tests/tests/: e2e.rs
