[package]
name = "qit"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "qit"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
rand = { workspace = true }
qit-domain = { path = "../crates/qit-domain" }
qit-git = { path = "../crates/qit-git" }
qit-http = { path = "../crates/qit-http" }
qit-storage = { path = "../crates/qit-storage" }
qit-transports = { path = "../crates/qit-transports" }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
