[package]
name = "qit-domain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
argon2 = { workspace = true }
async-trait = { workspace = true }
dunce = { workspace = true }
fs2 = "0.4.3"
git2 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
