[package]
name = "qit-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
directories = { workspace = true }
dunce = { workspace = true }
fs2 = "0.4.3"
qit-domain = { path = "../qit-domain" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
uuid = { workspace = true }
