[package]
name = "qit-transports"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
local-ip-address = "0.6.11"
ngrok = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
