[package]
name = "qit-webui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
qit-domain = { path = "../qit-domain" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
http-body-util = { workspace = true }
qit-http = { path = "../qit-http" }
qit-http-backend = { path = "../qit-http-backend" }
tower = { workspace = true }
